--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yumemi",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://opendata.resas-portal.go.jp:80",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
